--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=long8kmaxpro
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
