crud for category table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=WebQlyKho
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=qlkhohang
 spring.datasource.username=postgres
 spring.datasource.password=long8kmaxpro
 spring.jpa.show-sql=true
