add table order, order details, order type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=WebQlyKho
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=long8kmaxpro
+spring.datasource.password=1234
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.default_schema= qlkhohang
 spring.jpa.hibernate.ddl-auto=update
