--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#spring.application.name=WebQlyKho
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.default_schema=qlkhohang
-#spring.datasource.username=postgres
-#spring.datasource.password=1234
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.application.name=WebQlyKho
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=qlkhohang
+spring.datasource.username=postgres
+spring.datasource.password=long8kmaxpro
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
